# python-brick-cinderclient-ext

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
brick_cinderclient_ext/: __init__.py  brick_utils.py  client.py  exceptions.py  version.py  volume_actions.py
brick_cinderclient_ext/tests/functional/: test_brick_client.py
brick_cinderclient_ext/tests/functional/hooks/: post_test_hook.sh
brick_cinderclient_ext/tests/unit/: test_brick_client.py  test_brick_utils.py  test_cli.py  test_volume_actions.py
brick_python_cinderclient_ext/: __init__.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst
releasenotes/notes/: add_get_connector_nic_attr-fd429b22d02f8621.yaml  add_local_attach_nic_attr-923f867bd565dc36.yaml  drop-py2-5a229fe56b86cbe9.yaml  local-attach-feature-474283267873f091.yaml  require-root-for-attach-detach-commands-c3a63f6c5213e28c.yaml  start-using-reno-819e161ed41a130f.yaml  windows-support-c12b7b922aa43272.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
