[metadata]
name = python-brick-cinderclient-ext
description = python-cinderclient extension for local storage management
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = http://docs.openstack.org/cinder/latest/
python_requires = >=3.8
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    brick_cinderclient_ext
    brick_python_cinderclient_ext
